--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "aws-cognito-identity",
+  "name": "auth.smcdevs.support",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Authorization service for SMCDEVS",
+  "main": "src/app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": [
+    {
+      "name": "Park Min Jae",
+      "email": "qkr07224@gmail.cokm"
+    }
+  ],
+  "license": "MIT",
   "dependencies": {
     "@types/aws-lambda": "^8.10.97",
     "@types/node": "^17.0.38",
